--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,9 +337,7 @@ input::-moz-focus-inner {
  */
 .popup{
   /*visibility: hidden;*/
-  border-style: solid;
-  border-color: black;
-  border-width: thin;
+
   z-index: 2000;
   position: fixed;
   border-radius: 20px;
@@ -369,19 +367,29 @@ background-color: #AC3A6D;
   color: #B6006C;
 }
  .form{
-  border-color: #AC3A6D;
-  border
+  /*border-color: #AC3A6D;*/
+  /*
   border-width: thick;
-  border-style: solid;
+  border-style: solid;*/
   visibility: hidden;
   text-align: center;
   position: fixed;
-  z-index: 2000;
+  z-index: 3004;
   top: 223px;
   right: 20px;
+  /*background: url("formbg.png") no-repeat 10% 50%;*/
 /*background: linear-gradient(to left top,#13183D,#B67EDF);*/
-background-color: #171C62;
-  opacity: 0.9;
+/*background-color: #171C62;*/
+ 
+ /*background: url("../images/form-bg.png");*/
+
+background: -webkit-linear-gradient(45deg, #1b1f83 0%, #972461 100%);
+
+ /*  -webkit-clip-path: inset(300px 100px 300px 100px);
+  clip-path: inset(300px 100px 300px 100px);*/
+/*background: url("../images/events-bg.png") no-repeat 10% 50%;*/
+/*background-image: url("formbg.png");*/
+  opacity: 0.8;
   /*background-color: #AC3A6D;*/
   height: 400px;
 width: 350px;
@@ -444,7 +452,7 @@ input[type="radio"] {
   top: -150px;
   width: 1270px;
   height: 1200px;
-  opacity: 0.1;
+  opacity: 0.3;
   z-index: 6;
 }
 /**
@@ -795,6 +803,7 @@ nav.navbar .navbar-toggle.collapsed .bottom-bar {
   position: relative;
   background-color: #041A39;
   background-repeat: no-repeat;
+  opacity: 1.0;
   background-size: cover;
   background-position: 50% 50%;
   height: 952px;
@@ -1304,7 +1313,7 @@ nav.navbar .navbar-toggle.collapsed .bottom-bar {
 */
 #team {
   padding: 90px 0;
-  background: #171C62;
+  background: url("../images/form-bg.png");
 }
 #team h3 {
   margin-bottom: 30px;
@@ -1381,104 +1390,48 @@ margin-top: 0px;
 /*
 	10. Get events block
 */
-#events {
-  background: #1b1f83;
-  /* Old browsers */
-  background: -moz-linear-gradient(left, #1b1f83 0%, #972461 100%);
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(left, #1b1f83 0%, #972461 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right, #1b1f83 0%, #972461 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1b1f83', endColorstr='#972461', GradientType=1);
-  /* IE6-9 */
-  position: relative;
-  padding: 90px 0 120px;
-  color: #fff;
-}
-#events:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  background: url("../images/events-bg.png") no-repeat 10% 50%;
-}
-@media (max-width: 991px) {
-  #events:after {
-    display: none;
-  }
-}
-#events h3 {
-  color: #fff;
-  margin-bottom: 32px;
-}
-#events .item {
-  text-align: center;
-  background: rgba(255, 255, 255, 0.1);
-  border: 8px solid #AC94DD;
-  padding: 40px 0 45px;
-  position: relative;
-  z-index: 5;
-}
-#events .item.premium {
-  background: rgba(23, 28, 98, 0.5);
-}
 
-#events .item .header {
-  font-weight: 900;
-  font-size: 30px;
-  line-height: 1em;
-  color: #AC94DD;
-}
-#events .item .price {
-  font-weight: 900;
-  font-size: 72px;
-  line-height: 1em;
-  margin-bottom: 30px;
-}
-#events .item ul {
-  list-style: none;
-  text-align: left;
-  margin: 0 auto 20px;
-  display: inline-block;
-}
-#events .item ul li {
-  margin: 0 0 12px -30px;
-  font-size: 18px;
-}
-#events .item ul li:before {
-  content: "\f00c";
-  display: block;
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-weight: 100;
-  color: #AC94DD;
-  font-size: 14px;
-  position: absolute;
-  margin: 7px 0 0 -26px;
-}
-@media (max-width: 991px) {
-  #events .item {
-    margin-bottom: 30px;
-  }
-}
-@media (max-width: 768px) {
-  #events {
-    padding: 50px 0 50px;
-  }
-}
 /*
 	11. Gallery grid
 */
+#events{
+
+   background: #1b1f83;
+   /* Old browsers */
+   background: -moz-linear-gradient(left, #1b1f83 0%, #972461 100%);
+   /* FF3.6-15 */
+   background: -webkit-linear-gradient(left, #1b1f83 0%, #972461 100%);
+   /* Chrome10-25,Safari5.1-6 */
+   background: linear-gradient(to right, #1b1f83 0%, #972461 100%);
+   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1b1f83', endColorstr='#972461', GradientType=1);
+   /* IE6-9 */
+   /*position: relative;*/
+   padding: 90px 0 120px;
+   background: url("../images/form-bg.png");
+   color: #fff;
+
+ 
+}
+#events .container{
+  float: left;
+}
+.event{
+  padding: 20px;
+  margin-left: 140px;
+  margin-top: 50px;
+  text-align: center;
+  float: left;
+  width: 400px;
+  height: 400px;
+  background-color: rgba(255,255,255,0.2); 
+} 
+#event_heading{
+  margin-top: 20px;
+  font-size: 40px;
+  text-align: center;
+  color: white;
+}
 #gallery {
   padding: 90px 0;
 }
@@ -1538,7 +1491,8 @@ margin-top: 0px;
 	12. Join form
 */
 #form {
-  background: url("../images/form-bg.png") no-repeat 50% 35%;
+  /*background: url("../images/form-bg.png") no-repeat 50% 35%;*/
+   background: url("../images/form-bg.png");
   padding: 12px 0;
 }
 #form form {
@@ -2006,6 +1960,9 @@ img.rounded {
 }
 #meetteam{
   color: white;
+  margin-top: 0px;
+  font-size: 55px;
+  font-weight: 600px;
 }
 #photo{
 
@@ -2029,10 +1986,16 @@ img.rounded {
   font-size: 20px;
   margin-top: 0px;
   margin-left: 0px;
+  text-align: center;
 
 }
 .person{
   margin-top: 120px;
   float: left;
-
+  text-align: center;
+  /*background-color: black;*/
+  margin-left: 80px;
+/*margin-right: 70px;*/
+height: 230px;
+width: 200px;
 }
