--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,9 @@ Font-family: 'Source Sans Pro', sans-serif;
  * 2. Prevent iOS and IE text size adjust after device orientation change,
  *    without disabling user zoom.
  */
-
+#main_header{
+  z-index: 3003;
+}
 .one{
 float: left;
 margin-left: 55px;
@@ -452,8 +454,8 @@ input[type="radio"] {
   top: -150px;
   width: 1270px;
   height: 1200px;
-  opacity: 0.3;
-  z-index: 6;
+  opacity: 0.4;
+  z-index: 4000;
 }
 /**
  * Fix the cursor style for Chrome's increment/decrement buttons. For certain
@@ -624,7 +626,9 @@ nav.navbar {
   }
 }
 nav.navbar.dark {
-  background: rgba(4, 26, 57, 0.95);
+  background: rgba(4, 26, 57, 0.9);
+/*background: #B6006C;*/
+/*opacity: 0.7;*/
 }
 nav.navbar.dark #navbar {
   border-bottom: 0 none !important;
@@ -643,7 +647,7 @@ nav.navbar #navbar {
   }
   nav.navbar #navbar ul.navbar-nav li:hover > a,
   nav.navbar #navbar ul.navbar-nav .active > a {
-    color: #AC94DD;
+    color: #AC3A6D;
   }
   nav.navbar #navbar ul.navbar-nav li,
   nav.navbar #navbar ul.navbar-nav a {
@@ -803,7 +807,9 @@ nav.navbar .navbar-toggle.collapsed .bottom-bar {
   position: relative;
   background-color: #041A39;
   background-repeat: no-repeat;
-  opacity: 1.0;
+
+  /*background: url("../images/form-bg.png");*/
+  opacity: 0.85;
   background-size: cover;
   background-position: 50% 50%;
   height: 952px;
@@ -824,10 +830,14 @@ nav.navbar .navbar-toggle.collapsed .bottom-bar {
   /*margin: 75px 0 0 0;*/
   margin-top: -250px;
 }
+#main_header{
+  opacity: 1.0;
+}
 #slider-full h1 span {
   color: #fff;
   display: block;
   margin-top: 20px;
+  z-index: 5000;
   text-transform: uppercase;
   font-size: 80px;
   /*margin-top: 10px;*/
@@ -835,7 +845,9 @@ nav.navbar .navbar-toggle.collapsed .bottom-bar {
 #slider-full .calendar .day {
   display: block;
   color: #fff;
+  z-index: 3005;
   font-weight: 800;
+  opacity: 1.0;
   font-size: 176px;
   line-height: 1em;
   margin-top: -12px;
@@ -845,6 +857,7 @@ nav.navbar .navbar-toggle.collapsed .bottom-bar {
   color: #AC94DD;
   font-weight: 800;
   margin-top: 100px;
+  z-index: 4000;
   font-size: 50px;
   line-height: 1em;
   padding: 0px 0 0px;
@@ -1270,9 +1283,24 @@ nav.navbar .navbar-toggle.collapsed .bottom-bar {
 	7. Video block
 */
 #video {
-  height: 496px;
-  padding: 106px 0;
+background: url("../images/form-bg.png");
+  height: 600px;
+  z-index: 5;
+  /*padding: 106px 0;*/
   position: relative;
+  width: 100%;
+
+  padding: 100px;
+}
+#teaser{
+  text-align: center;
+  /*margin-bottom: 300px;*/
+  margin-top: -250px;
+  margin-left: 120px;
+  /*margin-right: 0px auto;*/
+  padding: 40px;
+  /*controls: true;*/
+
 }
 #video h3 {
   text-transform: uppercase;
@@ -1305,8 +1333,8 @@ nav.navbar .navbar-toggle.collapsed .bottom-bar {
   bottom: 0;
   width: 100%;
   height: 100%;
-  background: url("../images/video-play.png") no-repeat 50% 50%;
-  z-index: 1;
+  /*background: url("../images/video-play.png") no-repeat 50% 50%;*/
+  z-index: 4000;
 }
 /*
 	8. team 3-colum block
@@ -1314,6 +1342,8 @@ nav.navbar .navbar-toggle.collapsed .bottom-bar {
 #team {
   padding: 90px 0;
   background: url("../images/form-bg.png");
+/*background: -webkit-linear-gradient(135deg, #1b1f83 0%, #972461 100%);*/
+
 }
 #team h3 {
   margin-bottom: 30px;
@@ -1337,10 +1367,7 @@ margin-top: 0px;
   text-align: center;
   line-height: 110px;
 }
-#photo{
-  width: 100px;
-  height: 100px;
-}
+
 #team .item .num {
   position: relative;
   display: block;
@@ -1490,11 +1517,12 @@ margin-top: 0px;
 /*
 	12. Join form
 */
-#form {
-  /*background: url("../images/form-bg.png") no-repeat 50% 35%;*/
+/*#form {
+  background: url("../images/form-bg.png") no-repeat 50% 35%;
    background: url("../images/form-bg.png");
   padding: 12px 0;
-}
+}*/
+
 #form form {
   width: 70%;
   margin: 0 auto;
@@ -1567,13 +1595,13 @@ footer {
   background: #171C62;
   color: #fff;
   text-align: center;
-  padding: 70px 0 80px;
+  padding: 50px 0 50px;
   overflow-y: hidden;
 }
 footer div {
   font-size: 14px;
 }
-@media (max-width: 991px) {
+@media (max-width: 1000px) {
   footer {
     height: auto;
   }
@@ -1584,6 +1612,16 @@ footer a {
 footer a:hover {
   color: #fff;
 }
+/*.dateandtime{
+  position: absolute;
+left: 50px;
+ 
+}
+.dateandtime2{
+    position: absolute;
+   
+right: 50px;
+}*/
 footer .menu-footer {
   list-style: none;
   padding: 0;
@@ -1603,19 +1641,19 @@ footer .menu-footer li a {
   margin: 0 15px;
 }
 footer .menu-footer li a:hover {
-  color: #AC94DD;
+  color: #AC3A6D;
 }
 footer .menu-footer li.active a {
   color: #AC94DD;
   cursor: default;
 }
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
   footer .menu-footer {
     padding: 20px 0;
   }
   footer .menu-footer li {
     float: left;
-    width: 33.3%;
+    width: 50.0%;
     margin: 5px 0;
   }
 }
@@ -1625,11 +1663,33 @@ footer .plan {
   padding: 30px 0;
   margin: 0 0 60px 0;
 }
-footer .plan .date {
+footer .plan .date1 {
+  margin-top: 20px
   font-size: 18px;
+  margin-left: -430px;
   text-transform: uppercase;
   font-weight: 900;
 }
+footer .plan .date2 {
+  font-size: 18px;
+  margin-left: 260px;
+  margin-bottom: 100px;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+footer .plan .time1{
+ 
+  margin-left: -430px;
+  text-transform: uppercase;
+
+} 
+footer .plan .time2{
+ 
+  margin-left: 260px;
+  margin-top: -200px;
+  text-transform: uppercase;
+
+} 
 footer .plan .date span {
   color: #AC94DD;
 }
@@ -1969,11 +2029,21 @@ img.rounded {
   border-radius: 100px;
   height: 200px;
   width: 200px;
-  border-style: solid;
-  border-width: 8px;
+  /*border-style: solid;*/
+  /*border-width: 8px;*/
   border-color: #AC3A6D;
 
 
+}
+#photo_vinay{
+/*margin-top: 10px;*/
+  border-radius: 100px;
+  height: 200px;
+  width: 200px;
+  margin-left: 5px;
+  /*border-style: solid;*/
+  /*border-width: 8px;*/
+  border-color: #AC3A6D;
 }
 
 
@@ -1986,11 +2056,31 @@ img.rounded {
   font-size: 20px;
   margin-top: 0px;
   margin-left: 0px;
+ 
+  /*text-align: center;*/
+
+
+}
+#personname_vinay{
+  color: white;
+  font-size: 30px;
+  margin-top: 0px;
+  margin-left: 1px;
   text-align: center;
+
+
+}
+#facultyhead{
+
+  margin-left: 15px;
+  font-size: 20px;
+  color: white;
+  /*margin-top: 10px;*/
+  /*text-align: center;*/
 
 }
 .person{
-  margin-top: 120px;
+  margin-top: 100px;
   float: left;
   text-align: center;
   /*background-color: black;*/
@@ -1998,4 +2088,15 @@ img.rounded {
 /*margin-right: 70px;*/
 height: 230px;
 width: 200px;
+}
+.person_vinay{
+    /*float:right;*/
+  text-align: center;
+  /*background-color: black;*/
+  margin-left: 450px;
+  width: 220px;
+
+/*margin-right: 70px;*/
+
+height: 290px;
 }
